--- a/styles/general.css
+++ b/styles/general.css
@@ -1,9 +1,6 @@
-p{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
 
 body{
-    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
     padding-top: 80px;
     padding-left: 80px;
     background-color: rgb(242, 242, 242);
