--- a/styles/video.css
+++ b/styles/video.css
@@ -47,6 +47,28 @@
     padding-left: 20px;
     }
 
+    @media (max-width:750px) {
+      .all-video-grid{
+        grid-template-columns: 1fr 1fr;
+      }
+    }
+    @media (min-width: 751px) and (max-width: 999px) {
+      .all-video-grid{
+        grid-template-columns: 1fr 1fr 1fr;
+      }
+    }
+    
+    @media (min-width: 1000) {
+      .all-video-grid{
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+      }      
+    }
+    @media (min-width: px) {
+      .all-video-grid{
+        grid-template-columns: 1fr;
+      }      
+    }
+
     .video-title{
         font-size: 18px;
     }
@@ -57,7 +79,6 @@
     }
     .video-time{
         position: absolute;
-        font-family: Arial, Helvetica, sans-serif;
         font-size: 10px;
         background-color: black;
         color: white;
